@@ -22,7 +22,7 @@ int wrap_clone_child(void *args) {
 
 	if (!(flags & CLONE_VM)) {
 		pseudo_setupenv();
-		if (!pseudo_get_value("PSEUDO_UNLOAD")) {
+		if (!pseudo_has_unload(NULL)) {
 			pseudo_reinit_libpseudo();
 		} else {
 			pseudo_dropenv();
