@@ -9,7 +9,7 @@
 	 * in ways that avoid our usual enforcement of the environment.
 	 */
 	pseudo_setupenv();
-	if (pseudo_get_value("PSEUDO_UNLOAD"))
+	if (pseudo_has_unload(NULL))
 		pseudo_dropenv();
 
 	rc = real_popen(command, mode);
